kubernetes/nextcloud/templates/ingress.yaml
apiVersion: apps/v1
kind: Ingress
metadata:
  name: ingress-nextcloud
  namespace: nextcloud
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
      http:
        paths:
          - path: /nextcloud(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: nextcloud
                port:
                  number: 80
